# ai-me

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TESTING.md  docker-compose.yaml  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md
.github/workflows/: update_space.yml
.specify/memory/: constitution.md
architecture/adrs/: adr-linkedin-integration.md
docs/: CONFLICT_DETECTION.md  SUCCESS_METRICS.md
specs/001-personified-ai-agent/: gap-analysis.md  plan.md  spec.md  tasks.md
specs/001-personified-ai-agent/checklists/: requirements.md
specs/002-linkedin-profile-extractor/: CLARIFICATIONS.md  INDEX.md  INTEGRATION_GUIDE.md  README.md  spec.md
src/: README.md  agent.py  app.py  config.py  data.py  requirements.txt  test.py
src/notebooks/: experiments.ipynb
src/static/: scroll.js  style.css
test_data/: README.md  projects.md  team.md
tests/data/: README.md
tests/e2e/: __init__.py  conftest.py  test_chat_interaction.py
tests/integration/: spec-001.py
tests/unit/: test_config.py  test_data.py
